<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChartCountryActivity">

    <!--    region kumpulan card-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp16"
        android:layout_weight="1"
        android:background="@drawable/bg_header_gray"
        android:orientation="vertical"
        android:padding="@dimen/dp8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/img_flag_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="NestedWeights" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_country_chart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/country_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!--        region confirmed card-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_confirmed"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_total_confirmed_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/orange_gray"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/new_confirmed"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_new_confirmed_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <!--        endregion-->

        <!--        region deaths card-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_deaths"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_total_deaths_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/yellow_gray"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/new_deaths"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_new_deaths_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <!--        endregion-->

        <!--        region recovered card-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_recovered"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_total_recovered_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue_gray"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/new_recovered"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_new_recovered_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/currently"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <!--        endregion-->

    </LinearLayout>
    <!--    endregion-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp4"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp8" />

    </LinearLayout>


</LinearLayout>